NP-46909-remove-brage-handles-from-root-level, using PublicationRepresentation in order to keep a trusted source for bragehandle.